--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,13 @@ callgrind.out.*
 
 #Ignore doxygen generated files
 /docs/generated/
+
+# Ignore everything in tests/data
+tests/data/*
+
+# Allow tests/data/inputs and its contents
+!tests/data/inputs/
+!tests/data/inputs/**
+
+# Explicitly exclude unwanted files in tests/data/inputs
+tests/data/inputs/**/.DS_Store
