--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - dev/build-out
+      # - dev/build-out
   pull_request:
     branches:
       - main
