Build Out for existing clients (#2)
* start building out to support denigma and mnxvalidate

* minimal parse and minimal build working

* Switch over to using robust json_pointer values instead of fragile references

* fix issues around arrays

* checkpoint working

* Added ContentObject and ContentArray

* built-out to where it is ready for mnxvalidate to refactor to use it

* refinements

* remove unneeded define

* add missing files

* add missing include

* fix documentation

* ignore build-in nlohmann enum serializer

* try this on Linux

* pass this to Linux

* Try GitHub runners again

* Windows changes

* ready for PR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,18 @@ if (MSVC)
     add_compile_options(/bigobj)
 endif()
 
+#define other directories
+set(GENERATED_DIR "${CMAKE_BINARY_DIR}/generated")
+
+include("${CMAKE_SOURCE_DIR}/cmake/GenerateMnxSchemaXxd.cmake")
+
 # Add library
-add_library(mnxdom INTERFACE)
-target_include_directories(mnxdom INTERFACE src)
+add_library(mnxdom STATIC
+    src/EnumerationMaps.cpp
+    src/Implementations.cpp
+)
+
+target_include_directories(mnxdom PUBLIC src)
 
 # Disable building tests for nlohmann_json
 set(JSON_BuildTests OFF CACHE BOOL "Do not build tests for nlohmann_json")
@@ -33,7 +42,25 @@ FetchContent_Declare(
     DOWNLOAD_EXTRACT_TIMESTAMP TRUE
 )
 FetchContent_MakeAvailable(nlohmann_json)
-target_link_libraries(mnxdom INTERFACE nlohmann_json::nlohmann_json)
+
+# Disable building tests for json_schema_validator
+set(JSON_VALIDATOR_BUILD_TESTS OFF CACHE BOOL "Do not build tests for json_schema_validator")
+# Fetch json_schema_validator from your fork
+set(nlohmann_json_VERSION ${NLOHMANN_JSON_VERSION})
+FetchContent_Declare(
+    json_schema_validator
+    GIT_REPOSITORY https://github.com/pboettch/json-schema-validator
+    GIT_TAG        40af3ec39670e768fc3f01f935140af311d71024
+    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
+)
+FetchContent_MakeAvailable(json_schema_validator)
+
+target_link_libraries(mnxdom PUBLIC nlohmann_json::nlohmann_json)
+target_link_libraries(mnxdom PRIVATE nlohmann_json_schema_validator)
+target_compile_definitions(mnxdom PUBLIC JSON_DISABLE_ENUM_SERIALIZATION=1)
+
+add_dependencies(mnxdom GenerateMnxSchemaXxd)
+target_include_directories(mnxdom PRIVATE ${GENERATED_DIR})
 
 # Allow users to disable building tests
 option(mnxdom_BUILD_TESTING "Enable testing for your library" ON)
