that didn't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ option(mnxdom_BUILD_TESTING "Enable testing mnxdom" ON)
 if(mnxdom_BUILD_TESTING)
     message(STATUS "Testing enabled for mnxdom_BUILD_TESTING.")
     enable_testing()
-    add_subdirectory(tests ${CMAKE_BINARY_DIR}/tests)
+    add_subdirectory(tests)
 else()
     message(STATUS "Testing not enabled for mnxdom_BUILD_TESTING.")
 endif()
