Dictionary with user-defined keys working.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ FetchContent_MakeAvailable(googletest)
 # Add test executable
 add_executable(mnxdom_tests
     test_document.cpp
+    test_global.cpp
     test_main.cpp
     test_scores.cpp
 )
