denigma support phase 1 (#4)
* stray indent fix

* Add required properties to owners' constructor functions.

* Add Fraction class

* figured out parameter passing to create_ methods

* add tests for layoutChanges (including, in particular, fractions).

* add macros for array element properties, since this is a thing in JSON

* refactor with namespaces

* add doxygen comments for namespaces

* clean up documentation

* continue build-out of global measure object

* all currently defined properties added to global.measure

* finish defined properties of global

* Dictionary with user-defined keys working.

* get the tests of Dictionary working

* update schema

* refactor to latest mnx schema

* add win fix

* one solution for TimeSignatureUnit serializer

* refactor OPTIONAL_PROPERTY_WITH_DEFAULT macro

* tweaks for better code reuse

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,9 @@ FetchContent_MakeAvailable(googletest)
 # Add test executable
 add_executable(mnxdom_tests
     test_document.cpp
+    test_global.cpp
     test_main.cpp
+    test_scores.cpp
 )
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "AppleClang|Clang|GNU")
