schema validation refinements. (Capture all errors.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ include("${CMAKE_CURRENT_LIST_DIR}/cmake/GenerateMnxSchemaXxd.cmake")
 add_library(mnxdom STATIC
     src/EnumerationMaps.cpp
     src/Implementations.cpp
+    src/validation/SchemaValidate.cpp
 )
 
 target_include_directories(mnxdom PUBLIC src)
