start refactoring semantic validation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(mnxdom STATIC
     src/EnumerationMaps.cpp
     src/Implementations.cpp
     src/validation/SchemaValidate.cpp
+    src/validation/SemanticValidate.cpp
 )
 
 target_include_directories(mnxdom PUBLIC src)
