--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,18 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type (Release/Debug)" FORCE)
 endif()
 
-# Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
+# Set the C++ standard
+if(NOT CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD 23)
+endif()
+
+# Enforce at least C++17, allow higher if set by the parent
+if(CMAKE_CXX_STANDARD LESS 17)
+    message(FATAL_ERROR "Mnxdom requires at least C++17. Current: C++${CMAKE_CXX_STANDARD}")
+endif()
+
+message(STATUS "Mnxdom C++ standard: ${CMAKE_CXX_STANDARD}")
+
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
