Add 2ndary beam detection with tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ FetchContent_MakeAvailable(googletest)
 
 # Add test executable
 add_executable(mnxdom_tests
+    test_beams.cpp
     test_document.cpp
     test_global.cpp
     test_layouts.cpp
