Additions and fixes from MuseScore import (#24)
* fix lint from MuseScore

* correct reference line

* a couple more lints

* New create function

* comment formatting

* fix comment typo

* start working on key sig calcs

* update calcTransposedKeyFifthsFor

* refactor to allow tryGet from mapping

* Checkpoint layout utils

* layout analysis with tests

* Add buildLayoutSpans function.

* refactor to pass layout value rather than layout.content

* Add getIndexOf

* Add Array::toStdVector

* add required items to Array iterator

* add global::Measure::calcVisibleNumber

* fix bug in calcVisibleNumber

* Change `sequence.staff` to have default value.

* add generic sequence walker.

* start using the walker

* update callback signatures

* Add grace note detection.

* Advance time for unexplored tuplets

* top level should pass in sequence. no cheating with sub content arrays.

* make support booleans optional with default

* Add event to beam mapping

* add default layout from parts

* Allow events in tremolos to see their timings

* Refactor to allow clean container function.

* Housekeeping

* refactor Initializer to Fields

* Converted NoteValueQuantity to Fields.

* Add Fields initializer to Pitch

* Doxygen cleanup

* implement calcTransposed on Pitch

* get correct sequence container

* Add tests (and fixes) for calcTransposed.

* Full constexpr FractionValue

* refactor buildContent to use walkSequenceContent

* add event ottava map

* simplify ottava map

* rename mapping

* make ottava staff default to 1

* add entitymap policies for buildEntityMap

* Add 2ndary beam detection with tests

* add requirement for initial (and valid) clefs

* Make part.measures required.

* provisionally change the mnx schema to require part.measures.

* add FractionValue::toDouble

* refactor line type to optional with default

* update entity mapping to include lyric lines

* fix Dictionary::at

* more Dictionary refactoring

* Add type traits to expand validity of tryGet<T>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,10 +11,14 @@ FetchContent_MakeAvailable(googletest)
 
 # Add test executable
 add_executable(mnxdom_tests
+    test_beams.cpp
     test_document.cpp
     test_global.cpp
+    test_layouts.cpp
     test_main.cpp
     test_scores.cpp
+    test_sequences.cpp
+    test_ottavas.cpp
     validation/test_examples.cpp
     validation/test_global.cpp
     validation/test_layouts.cpp
