add `validation::hasValidDocumentRoot` for top-level validation only

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(mnxdom_tests
     test_scores.cpp
     test_sequences.cpp
     test_ottavas.cpp
+    validation/test_document.cpp
     validation/test_examples.cpp
     validation/test_global.cpp
     validation/test_layouts.cpp
